force-app/main/default/objects/FS_ConfiguracionSLA__c/FS_ConfiguracionSLA__c.object-meta.xml
<CustomObject>
    <label>configuración SLA</label>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>No SLA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuraciones SLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>