force-app/main/default/objects/FS_ConfiguracionSLA__c/fields/FS_EsCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_EsCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es cliente?</label>
    <type>Checkbox</type>
</CustomField>