force-app/main/default/objects/FS_ConfiguracionSLA__c/fields/FS_NombreDeCuenta__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreDeCuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de la Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Configuraciones SLA</relationshipLabel>
    <relationshipName>Configuraciones_SLA</relationshipName>
    <type>Lookup</type>
</CustomField>