force-app/main/default/objects/FS_ConfiguracionSLA__c/fields/FS_NombreTipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreTipoRegistro__c</fullName>
    <label>Nombre Tipo de Registro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulta</fullName>
            </value>
            <value>
                <fullName>Incidente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>