force-app/main/default/objects/FS_ConfiguracionSLA__c/fields/FS_SLA__c.field-meta.xml
<CustomField>
    <fullName>FS_SLA__c</fullName>
    <inlineHelpText>Se añade el tiempo estimado en horas para que se ejecute la respuesta del cliente e interno.</inlineHelpText>
    <label>SLA (Horas Laborales)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>