force-app/main/default/objects/FS_ConfiguracionSLA__c/fields/FS_SubEstado__c.field-meta.xml
<CustomField>
    <fullName>FS_SubEstado__c</fullName>
    <label>Sub Estado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apertura de caso</fullName>
            </value>
            <value>
                <fullName>Entrega 1a respuesta</fullName>
            </value>
            <value>
                <fullName>Información validada</fullName>
            </value>
            <value>
                <fullName>Análisis N1</fullName>
            </value>
            <value>
                <fullName>Desarrollo Incidente Definitivo</fullName>
            </value>
            <value>
                <fullName>Revisión Documentación N2</fullName>
            </value>
            <value>
                <fullName>Desarrollo Incidente Puntual</fullName>
            </value>
            <value>
                <fullName>Aprobación de Solución IP-Release</fullName>
            </value>
            <value>
                <fullName>Costo Aceptado</fullName>
            </value>
            <value>
                <fullName>Costo Rechazado</fullName>
            </value>
            <value>
                <fullName>Análisis Falla Operativa</fullName>
            </value>
            <value>
                <fullName>Escalado a N2</fullName>
            </value>
            <value>
                <fullName>Análisis N2</fullName>
            </value>
            <value>
                <fullName>Envío de respuesta</fullName>
            </value>
            <value>
                <fullName>Respuesta aceptada</fullName>
            </value>
            <value>
                <fullName>Respuesta rechazada</fullName>
            </value>
            <value>
                <fullName>En reproceso por rechazo</fullName>
            </value>
            <value>
                <fullName>En Espera de Respuesta del Cliente</fullName>
            </value>
            <value>
                <fullName>Elaboración Diseño Técnico</fullName>
            </value>
            <value>
                <fullName>Aprobación Diseño Técnico</fullName>
            </value>
            <value>
                <fullName>Validación-Entrega de Fuentes</fullName>
            </value>
            <value>
                <fullName>Elaboración Solución Definitiva</fullName>
            </value>
            <value>
                <fullName>Aprobación Solución Definitiva N2</fullName>
            </value>
            <value>
                <fullName>Aprobación Solución Definitiva Releases</fullName>
            </value>
            <value>
                <fullName>Escalado a QA</fullName>
            </value>
            <value>
                <fullName>Elaboración Plan de Pruebas</fullName>
            </value>
            <value>
                <fullName>Aprobación Plan de Pruebas</fullName>
            </value>
            <value>
                <fullName>Instalación Parche Releases</fullName>
            </value>
            <value>
                <fullName>Aprobación Instalación Parche - Releases</fullName>
            </value>
            <value>
                <fullName>Certificación Parche QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>