force-app/main/default/objects/FS_ConfiguracionSLA__c/fields/FS_Tipo_de_Incidente__c.field-meta.xml
<CustomField>
    <fullName>FS_Tipo_de_Incidente__c</fullName>
    <label>Tipo de Incidente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puntual</fullName>
            </value>
            <value>
                <fullName>Definitivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>